# luci

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.agents/rules/: spec-kit-alignment.md  spec-kit-implement-rule.md
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.specify/: extensions.yml  integration.json
agent/: main.py  pyproject.toml
agent/config/: settings.py
agent/finance_api_client/: README.md  __init__.py  pyproject.toml
agent/finance_api_client/luci_foundation_walking_skeleton_client/: __init__.py
agent/finance_api_client/luci_foundation_walking_skeleton_client/api/health/: health.py
agent/finance_api_client/luci_foundation_walking_skeleton_client/api/keys/: jwks.py
agent/finance_api_client/luci_foundation_walking_skeleton_client/api/skeleton/: whoami.py
agent/finance_api_client/luci_foundation_walking_skeleton_client/models/: __init__.py  health_component.py  health_component_details.py  health_report.py  health_report_components.py  health_status.py  jwk.py  jwk_alg.py  jwk_kty.py  jwk_set.py  jwk_use.py  problem_detail.py  whoami_body.py  whoami_response.py
agent/health/: routes.py
agent/http/: m2m_auth.py  spring_client.py
agent/observability/: logging.py  metrics.py
agent/tests/: conftest.py  test_settings.py  test_skeleton.py
docs/: Luci_Tech_Design_v3.md  PRD_Luci_v2.md
finance-api/: build.gradle.kts
infra/: docker-compose.yml
scripts/: bootstrap-keys.sh  lint-no-spring-httpx.sh
(+48 files in other folders)
